# RsGPACalculator

./: 0.json  Cargo.toml  Makefile.toml  README.md  index.html  package.json  styles.css  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
.github/workflows/: deploy.yml
courses/: 1.json  courses.json
src/: api.rs  app.rs  app_state.rs  lib.rs  route.rs  types.rs
src/components/: course_card.rs  gpa_overview.rs  mod.rs
src/pages/: course_detail.rs  home.rs  mod.rs
static/: index.html  styles.css
static/courses/: courses.json
