[lib]
crate-type = ["cdylib", "rlib"]
[package]
name = "gpacalculator"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.87"
reqwasm = "0.4"
wasm-bindgen-futures = "0.4"
